--- a/wepScraping_prac.ipynb
+++ b/wepScraping_prac.ipynb
@@ -568,20 +568,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<p id=\"book_title\">토지</p>,\n",
-       " <p id=\"book_title\">태백산맥</p>,\n",
-       " <p id=\"book_title\">감옥으로부터의 사색</p>]"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<p id=\"book_title\">토지</p>, <p id=\"book_title\">태백산맥</p>, <p id=\"book_title\">감옥으로부터의 사색</p>]\n",
+      "[<p id=\"author\">박경리</p>, <p id=\"author\">조정래</p>, <p id=\"author\">신영복</p>]\n"
+     ]
     }
    ],
    "source": [
@@ -597,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -611,18 +607,15 @@
    ],
    "source": [
     "#책 제목과 작가를 포함한 요소를 각각 추출한 다음 텍스트만 추출\n",
-    "#각 요소를 find_all로 찾는다 => 리스트로 반환\n",
-    "#리스트에 있는 요소를 순회해야하기때문에 for문을 사용한다.\n",
-    "#나온 데이터를 저장해야한다. 리스트를 만들고 append를 사용한다.\n",
-    "# \n",
+    "#각 요소를 find_all로 찾는다 => 리스트로 반환된다.\n",
+    "#리스트에 있는 요소를 문자열로 순회해야하기때문에 for문을 사용한다.\n",
+    "\n",
     "# find_all 결과 자체가 리스트로 반환하기때문에 따로 리스트를 만들고 append를 쓸 필요가없다.\n",
     "\n",
     "\n",
     "book_titles = soup2.find_all('p',{'id':'book_title'})\n",
     "authors = soup2.find_all('p',{'id':'author'})\n",
     "\n",
-    "f_book_titles=[]\n",
-    "f_authors=[]\n",
     "\n",
     "f_book_titles = [title.get_text() for title in book_titles]\n",
     "f_authors = [author.get_text() for author in authors]\n",
@@ -662,12 +655,533 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      " <head>\n",
+      "  <title>\n",
+      "   작품과 작가 모음\n",
+      "  </title>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <h1>\n",
+      "   책 정보\n",
+      "  </h1>\n",
+      "  <p id=\"book_title\">\n",
+      "   토지\n",
+      "  </p>\n",
+      "  <p id=\"author\">\n",
+      "   박경리\n",
+      "  </p>\n",
+      "  <p id=\"book_title\">\n",
+      "   태백산맥\n",
+      "  </p>\n",
+      "  <p id=\"author\">\n",
+      "   조정래\n",
+      "  </p>\n",
+      "  <p id=\"book_title\">\n",
+      "   감옥으로부터의 사색\n",
+      "  </p>\n",
+      "  <p id=\"author\">\n",
+      "   신영복\n",
+      "  </p>\n",
+      " </body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soup2.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h1>책 정보</h1>]"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#CSS 셀렉터를 사용\n",
+    "soup2.select('body h1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p id=\"book_title\">토지</p>,\n",
+       " <p id=\"author\">박경리</p>,\n",
+       " <p id=\"book_title\">태백산맥</p>,\n",
+       " <p id=\"author\">조정래</p>,\n",
+       " <p id=\"book_title\">감옥으로부터의 사색</p>,\n",
+       " <p id=\"author\">신영복</p>]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#body 요소 중 p태그 가진 모든 요소\n",
+    "soup2.select('body p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p id=\"book_title\">토지</p>,\n",
+       " <p id=\"author\">박경리</p>,\n",
+       " <p id=\"book_title\">태백산맥</p>,\n",
+       " <p id=\"author\">조정래</p>,\n",
+       " <p id=\"book_title\">감옥으로부터의 사색</p>,\n",
+       " <p id=\"author\">신영복</p>]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#현재 body태그안에 p태그가 하나뿐이라 p로 선택했을때도 결과가 같지만,\n",
+    "#원하는 데이터를 정확히 가져오기 위해서는  경로를 자세하게 적어주면 좋다.\n",
+    "soup2.select('p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p id=\"book_title\">토지</p>,\n",
+       " <p id=\"book_title\">태백산맥</p>,\n",
+       " <p id=\"book_title\">감옥으로부터의 사색</p>]"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup2.select('#book_title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p id=\"book_title\">토지</p>,\n",
+       " <p id=\"book_title\">태백산맥</p>,\n",
+       " <p id=\"book_title\">감옥으로부터의 사색</p>]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup2.select('body p#book_title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing .//Myexam/HTML_example_my_site.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile .//Myexam/HTML_example_my_site.html \n",
+    "<!doctype html>\n",
+    " <html>\n",
+    "  <head>\n",
+    "    <meta charset=\"utf-8\">\n",
+    "    <title>사이트 모음</title>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <p id=\"title\"><b>자주 가는 사이트 모음</b></p>\n",
+    "    <p id=\"contents\">이곳은 자주 가는 사이트를 모아둔 곳입니다.</p>\n",
+    "    <a href=\"http://www.naver.com\" class=\"portal\" id=\"naver\">네이버</a> <br>\n",
+    "    <a href=\"https://www.google.com\" class=\"search\" id=\"google\">구글</a> <br>\n",
+    "    <a href=\"http://www.daum.net\" class=\"portal\" id=\"daum\">다음</a> <br>\n",
+    "    <a href=\"http://www.nl.go.kr\" class=\"government\" id=\"nl\">국립중앙도서관</a>\n",
+    "  </body>\n",
+    " </html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CSS 셀렉터를 사용"
+    "f = open('./Myexam/HTML_example_my_site.html', encoding='utf-8')\n",
+    "\n",
+    "html3 = f.read()\n",
+    "f.close\n",
+    "\n",
+    "soup3 = BeautifulSoup(html3,'lxml')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<title>사이트 모음</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<p id=\"title\"><b>자주 가는 사이트 모음</b></p>\n",
+       "<p id=\"contents\">이곳은 자주 가는 사이트를 모아둔 곳입니다.</p>\n",
+       "<a class=\"portal\" href=\"http://www.naver.com\" id=\"naver\">네이버</a> <br/>\n",
+       "<a class=\"search\" href=\"https://www.google.com\" id=\"google\">구글</a> <br/>\n",
+       "<a class=\"portal\" href=\"http://www.daum.net\" id=\"daum\">다음</a> <br/>\n",
+       "<a class=\"government\" href=\"http://www.nl.go.kr\" id=\"nl\">국립중앙도서관</a>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"portal\" href=\"http://www.naver.com\" id=\"naver\">네이버</a>,\n",
+       " <a class=\"search\" href=\"https://www.google.com\" id=\"google\">구글</a>,\n",
+       " <a class=\"portal\" href=\"http://www.daum.net\" id=\"daum\">다음</a>,\n",
+       " <a class=\"government\" href=\"http://www.nl.go.kr\" id=\"nl\">국립중앙도서관</a>]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#읽어온 HTML 소스에서 태그가 a인 요소를 모두 가져오기\n",
+    "soup3.select('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"portal\" href=\"http://www.naver.com\" id=\"naver\">네이버</a>,\n",
+       " <a class=\"portal\" href=\"http://www.daum.net\" id=\"daum\">다음</a>]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#HTML 소스에서 태그가 a이면서 class 속성값이 \"portal\"인 요소만 가져오기\n",
+    "soup3.select('a.portal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a class=\"portal\" href=\"http://www.naver.com\" id=\"naver\">네이버</a>]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#태그를 포함하는 요소 중 id 속성이 \"naver\" 인 요소를 선택\n",
+    "soup3.select('a#naver')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting .//Myexam/br_example_constitution.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile .//Myexam/br_example_constitution.html\n",
+    " <!doctype html>\n",
+    " <html>\n",
+    " <head>\n",
+    " <meta charset=\"utf-8\">\n",
+    " <title>줄 바꿈 테스트 예제</title>\n",
+    " </head>\n",
+    " <body>\n",
+    " <p id=\"title\"><b>대한민국헌법</b></p>\n",
+    " <p id=\"content\">제1조 <br/>①대한민국은 민주공화국이다.<br/>②대한민국의 주권은 국민에게 있고, 모든 권력은 국민으로부터 나온다.</p>\n",
+    " <p id=\"content\">제2조 <br/>①대한민국의 국민이 되는 요건은 법률로 정한다.②국가는 법률이 정하는 바에 의하여 재외국민을 보호할 의무를 진다.</p>\n",
+    "</body>\n",
+    " </html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<title>줄 바꿈 테스트 예제</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<p id=\"title\"><b>대한민국헌법</b></p>\n",
+       "<p id=\"content\">제1조 <br/>①대한민국은 민주공화국이다.<br/>②대한민국의 주권은 국민에게 있고, 모든 권력은 국민으로부터 나온다.</p>\n",
+       "<p id=\"content\">제2조 <br/>①대한민국의 국민이 되는 요건은 법률로 정한다.②국가는 법률이 정하는 바에 의하여 재외국민을 보호할 의무를 진다.</p>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('./Myexam/br_example_constitution.html', encoding='utf-8')\n",
+    "html4 = f.read()\n",
+    "f.close()\n",
+    "\n",
+    "soup4 = BeautifulSoup(html4, 'lxml')\n",
+    "soup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "대한민국헌법\n",
+      "['제1조 ①대한민국은 민주공화국이다.②대한민국의 주권은 국민에게 있고, 모든 권력은 국민으로부터 나온다.', '제2조 ①대한민국의 국민이 되는 요건은 법률로 정한다.②국가는 법률이 정하는 바에 의하여 재외국민을 보호할 의무를 진다.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = soup4.select('#title')\n",
+    "content = soup4.select('p#content')\n",
+    "\n",
+    "title=title[0].get_text()\n",
+    "contents=[]\n",
+    "[contents.append(content[item].get_text()) for item in range(len(content))]\n",
+    "\n",
+    "\n",
+    "print(title)\n",
+    "print(contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests  \n",
+    "\n",
+    "url = 'https://www.python.org/static/img/python-logo.png'\n",
+    "html_image = requests.get(url)\n",
+    "\n",
+    "html_image\n",
+    "\n",
+    "#requests를 보내서 해당 url의 응답을 확인\n",
+    "#200번 나오면 통신 양호로 판단, 진행!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OS의 간단한 명령어들\n",
+    "1. 현재 경로 구하기 -- getcwd (get Current Working Directory 일까..?)\n",
+    "\t<br>os.getcwd( )\n",
+    "2. 특정 경로에 존재하는 파일과 디렉토리 목록 구하기 -- listdir (list Directory 일까..?)\n",
+    "3. 폴더 생성하기 -- os.mkdir(directory) <br>\n",
+    "\t응용 >> if not os.path.exists(directory): <br>\n",
+    "    \t\t\tos.mkdir(directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python-logo.png'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#파이썬 기본 내장 함수\n",
+    "import os\n",
+    "\n",
+    "image_file_name = os.path.basename(url)\n",
+    "image_file_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = './resource/' \n",
+    "\n",
+    "if not os.path.exists(folder):\n",
+    "\tos.makedirs(folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = os.path.join(folder, image_file_name)\n",
+    "image_path\n",
+    "imageFile = open(image_path, 'wb') #writing, binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kalimba.mp3',\n",
+       " 'Kalimba.ogg',\n",
+       " 'python-logo.png',\n",
+       " 'Wildlife.mp4',\n",
+       " 'Wildlife.webm',\n",
+       " '펭귄.jfif']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이미지 데이터를 1000000 바이트씩 나눠서 내려받고 파일에 순차적으로 저장\n",
+    "chunk_size = 1000000\n",
+    "for chunk in html_image.iter_content(chunk_size):\n",
+    "\timageFile.write(chunk)\n",
+    "\timageFile.close()\n",
+    "\n",
+    "os.listdir(folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
