수업 내용 정리하는중
이번 연휴에 고향다녀와서 놀지말고 다 정리하기

--- a/wepScraping_prac.ipynb
+++ b/wepScraping_prac.ipynb
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "'python-logo.png'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        " '펭귄.jfif']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,10 +1178,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests  \n",
+    "import os\n",
+    "url = 'https://www.python.org/static/img/python-logo.png'\n",
+    "html_image = requests.get(url)\n",
+    "image_file_name = os.path.basename(url)\n",
+    "folder = './resource/' \n",
+    "if not os.path.exists(folder):\n",
+    "\tos.makedirs(folder)\n",
+    "\n",
+    "image_path = os.path.join(folder, image_file_name)\n",
+    "imageFile = open(image_path, 'wb')\n",
+    "# 이미지 데이터를 1000000 바이트씩 나눠서 저장\n",
+    "\n",
+    "chunk_size = 1000000\n",
+    "for chunk in html_image.iter_content(chunk_size):\n",
+    "\timageFile.write(chunk)\n",
+    "imageFile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 바이너리 모드('wb') 사용 이유\n",
+    "1. 데이터 무결성 보장: 이미지 파일은 바이너리 데이터로 구성되어 있습니다. 'wb' 모드를 사용하면 파일의 바이트를 그대로 저장하여 이미지 데이터의 무결성을 보장할 수 있습니다.\n",
+    "2. 인코딩 문제 방지: 텍스트 모드로 저장할 경우 발생할 수 있는 인코딩 관련 문제를 피할 수 있습니다. 바이너리 모드는 데이터를 있는 그대로 저장하므로 인코딩 변환으로 인한 데이터 손실이 없습니다.\n",
+    "\n",
+    "## 2. 청크 단위로 데이터 나누어 저장하는 이유\n",
+    "1. 메모리 효율성: 대용량 파일을 한 번에 메모리에 로드하지 않고 작은 청크 단위로 처리함으로써 메모리 사용량을 줄일 수 있습니다. 이는 특히 큰 이미지 파일을 다룰 때 유용합니다.\n",
+    "2. 네트워크 효율성: 전체 파일을 다운로드할 때까지 기다리지 않고 받은 데이터를 즉시 처리할 수 있어 네트워크 효율성이 향상됩니다.\n",
+    "3. 응답성 향상: 큰 파일을 작은 단위로 처리함으로써 프로그램의 응답성을 유지할 수 있습니다. 전체 파일을 한 번에 처리하는 경우 프로그램이 일시적으로 멈추는 현상을 방지할 수 있습니다.\n",
+    "4. 진행 상황 모니터링: 청크 단위로 처리하면 다운로드 진행 상황을 쉽게 모니터링하고 표시할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<img alt=\"Reshot\" height=\"33\" src=\"https://www.reshot.com/build/reshot-logo--mark-f8dfafbc1cc8fbf4dfa0e2f210265735aefa6e32f883b5a1fe27fd94f84719b3.svg\" title=\"Reshot\" width=\"46\"/>,\n",
+       " <img alt=\"External link\" height=\"16\" loading=\"lazy\" src=\"https://www.reshot.com/build/photos/external-link-arrow-9fdf3fbf53535dc5eb554a9a5d5601329bb7bb7169ee72746a37fac0527b2967.svg\" width=\"16\"/>,\n",
+       " <img alt=\"External link\" height=\"16\" loading=\"lazy\" src=\"https://www.reshot.com/build/photos/external-link-arrow-9fdf3fbf53535dc5eb554a9a5d5601329bb7bb7169ee72746a37fac0527b2967.svg\" width=\"16\"/>,\n",
+       " <img alt=\"Reshot\" class=\"global-footer__logo-image\" height=\"82\" src=\"https://www.reshot.com/build/reshot-logo--mark-f8dfafbc1cc8fbf4dfa0e2f210265735aefa6e32f883b5a1fe27fd94f84719b3.svg\" title=\"Reshot\" width=\"113\"/>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#여러개의 이미지를 한번에에 받기\n",
+    "import requests  \n",
+    "from bs4 import BeautifulSoup \n",
+    "URL = 'https://reshot.com/search/animal'\n",
+    "html_reshot_image = requests.get(URL).text\n",
+    "soup_reshot_image = BeautifulSoup(html_reshot_image, \"lxml\")\n",
+    "reshot_image_elements = soup_reshot_image.select('a img') \n",
+    "reshot_image_elements[0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.reshot.com/build/photos/external-link-arrow-9fdf3fbf53535dc5eb554a9a5d5601329bb7bb7169ee72746a37fac0527b2967.svg'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reshot의 요소를 보면 첫번쨰는 reshot의 로고\n",
+    "#두번째요소부터 가지고 오기위해 슬라이싱 필요\n",
+    "\n",
+    "reshot_image_elements[1:4]\n",
+    "\n",
+    "\n",
+    "#태그의 속성값을 가지고 오고싶을땐 .get( )을 사용한다.\n",
+    "\n",
+    "reshot_image_elements[1].get('src')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests  \n",
+    "from bs4 import BeautifulSoup \n",
+    "import os\n",
+    "\n",
+    "# URL(주소)에서 이미지 주소 추출\n",
+    "def get_image_url(url): \n",
+    "    html_image_url = requests.get(url).text\n",
+    "    soup_image_url = BeautifulSoup(html_image_url, \"lxml\")  \n",
+    "    image_elements = soup_image_url.select('img') \n",
+    "    if(image_elements != None):\n",
+    "        image_urls = []\n",
+    "        for image_element in image_elements:\n",
+    "            image_urls.append(image_element.get('src'))\n",
+    "        return image_urls        \n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "# 폴더를 지정해 이미지 주소에서 이미지 내려받기\n",
+    "def download_image(img_folder, img_url):\n",
+    "    if(img_url != None):  \n",
+    "        html_image = requests.get(img_url)\n",
+    "        # os.path.basename(URL)는 웹사이트나 폴더가 포함된 파일명에서 파일명만 분리    \n",
+    "        imageFile = open(os.path.join(img_folder, os.path.basename(img_url)), 'wb')\n",
+    "        chunk_size = 1000000 # 이미지 데이터를 1000000 바이트씩 나눠서 저장\n",
+    "        for chunk in html_image.iter_content(chunk_size):\n",
+    "            imageFile.write(chunk)\n",
+    "            imageFile.close()\n",
+    "        print(\"이미지 파일명: '{0}'. 내려받기 완료!\".format(os.path.basename(img_url))) \n",
+    "    else:       \n",
+    "        print(\"내려받을 이미지가 없습니다.\")\n",
+    "\n",
+    "\n",
+    "# 웹 사이트의 주소 지정   \n",
+    "reshot_url = 'https://www.reshot.com/search/animal'\n",
+    "figure_folder = \"C:/Myexam/download\" # 이미지를 내려받을 폴더 지정  \n",
+    "reshot_image_urls = get_image_url(reshot_url) # 이미지 파일의 주소 가져오기\n",
+    "num_of_download_image = 3 # 내려받을 이미지 개수 지정\n",
+    "# num_of_download_image = len(reshot_image_urls)\n",
+    "for k in range(num_of_download_image):\n",
+    "    download_image(figure_folder,reshot_image_urls[k])\n",
+    "print(\"================================\")\n",
+    "print(\"선택한 모든 이미지 내려받기 완료!\")"
+   ]
   }
  ],
  "metadata": {
