--- a/Mini_Project/Project_4/chart_top100.ipynb
+++ b/Mini_Project/Project_4/chart_top100.ipynb
@@ -1273,7 +1273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "seSac_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1287,7 +1287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
