--- a/wepScraping_prac.ipynb
+++ b/wepScraping_prac.ipynb
@@ -1328,7 +1328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "seSac_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1342,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
