12일 배운내용 정리
몽고DB실습, 통계정리 실습완료

--- a/pymysql_proc/crawling_db_proc.ipynb
+++ b/pymysql_proc/crawling_db_proc.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.request import urlopen\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +175,7 @@
     }
    ],
    "source": [
+    "#테이블 drop\n",
     "sql = 'drop table product'\n",
     "cursor.execute(sql)"
    ]
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,10 +390,7 @@
     }
    ],
    "source": [
-    "#토너미스트\n",
-    "# products = soup.select('div.xans-element-.xans-product.xans-product-listnormal.ec-base-product > ul > li')\n",
-    "\n",
-    "#메이크업\n",
+    "#전체 상품 선택자\n",
     "products = soup.select('div.xans-element-.xans-product.xans-product-listnormal.ec-base-product > ul > li')\n",
     "\n",
     "for n,product in enumerate(products):\n",
@@ -424,13 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def get_product_info(product):\n",
-    "\tproduct_name = product.select_one('strong > a > span:nth-child(2)').get_text()\n",
+    "\ttry:\n",
+    "\t\tproduct_name = product.select_one('strong > a > span:nth-child(2)').get_text()\n",
+    "\texcept Exception:\n",
+    "\t\tproduct_name = ' '\n",
     "\t\n",
     "\tbase_url = 'https://jolse.com'\n",
     "\tdetail_url = product.select_one('strong > a').get('href')\n",
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "데이터 베이스 컬럼럼\n",
+    "데이터 베이스 컬럼\n",
     "('PRODUCT_CODE', 'int', 'NO', 'PRI', None, 'auto_increment'),\n",
     "('PRODUCT_NAME', 'varchar(200)', 'NO', '', None, ''),\n",
     "('PRODUCT_PRICE', 'varchar(100)', 'YES', '', None, ''),\n",
@@ -3216,7 +3216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
