머신러닝 실습부분 업로드
03번 파일까지 실습완료
k-fold부분 추가공부 필요

--- a/Statistics_proc/Statistic_1d_proc.ipynb
+++ b/Statistics_proc/Statistic_1d_proc.ipynb
@@ -2064,6 +2064,48 @@
     "ax.boxplot(english_scores, labels=['english'])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172.500"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = [165,170,175,180]\n",
+    "data_mean=pd.Series(data1).mean()\n",
+    "data_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-7.5, -2.5,  2.5,  7.5])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1-data_mean"
+   ]
   }
  ],
  "metadata": {
