타이타닉 실습, 머신러닝 실습
age회귀분석하다가 실패해서 뼈저린 아픔을 느낌

--- a/machine_learning_prac/train_test_split.ipynb
+++ b/machine_learning_prac/train_test_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -321,6 +321,43 @@
     "\n",
     "#개별 iteration별 정확도를 합하여 평균 정확도 계산\n",
     "print(f'\\n 평균 검증 정확도 : {np.mean(cv_accuracy):.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DESCR', 'data', 'data_module', 'feature_names', 'filename', 'frame', 'target', 'target_names']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "0    50\n",
+       "1    50\n",
+       "2    50\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stratified K 폴드\n",
+    "import pandas as pd\n",
+    "iris = load_iris()\n",
+    "print(dir(iris))\n",
+    "iris_df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
+    "iris_df['label'] = iris.target\n",
+    "iris_df['label'].value_counts()"
    ]
   },
   {
