--- a/LLM/LangChain/langchain.ipynb
+++ b/LLM/LangChain/langchain.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,15 +542,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_12168\\1331107071.py:7: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
-      "  agent = initialize_agent(tools, llm, agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n"
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18756\\1193491888.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(temperature=0, model=\"gpt-4o\")\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18756\\1193491888.py:8: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "  agent = initialize_agent(\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18756\\1193491888.py:16: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  agent.run(\"아이브 장원영이 태어난 해는? 2025년 현재의 나이는?\")\n"
      ]
     },
     {
@@ -560,7 +564,7 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mTo answer the question, I need to find out the birth year of Jang Wonyoung and then calculate her age in 2025.\n",
+      "\u001b[32;1m\u001b[1;3mTo answer the question about the birth year of Jang Wonyoung from IVE and her age in 2025, I will first find out her birth year.\n",
       "\n",
       "Action: wikipedia\n",
       "Action Input: Jang Wonyoung\n",
@@ -573,15 +577,14 @@
       "\n",
       "Page: List of Produce 48 contestants\n",
       "Summary: Produce 48 is a 2018 South Korean competition television show on Mnet in which a girl group is formed from a large pool of South Korean and Japanese idols, most of whom are represented by major idol talent agencies such as AKB48 Group. The show starts with 96 contestants, with occasional rounds of competition and voting, some of which result in elimination from the contest. Of the 96 contestants, 57 of them are from South Korean management companies, and 39 of them are from Japanese idol groups, composed of current members of AKB48 and their sister groups. The final 12 contestants, with no nationality caps, as voted only by Korean viewers, will promote as a group for two and a half years.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mJang Wonyoung was born on August 31, 2004. To calculate her age in 2025, we subtract her birth year from 2025.\n",
+      "Thought:\u001b[32;1m\u001b[1;3mJang Wonyoung was born on August 31, 2004. To calculate her age in 2025, I will subtract her birth year from 2025.\n",
       "\n",
       "Action: Calculator\n",
-      "Action Input: 2025 - 2004\n",
-      "\u001b[0m\n",
+      "Action Input: 2025 - 2004\u001b[0m\n",
       "Observation: \u001b[33;1m\u001b[1;3mAnswer: 21\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3mI now know the final answer. Jang Wonyoung was born in 2004, and in 2025, she will be 21 years old. \n",
       "\n",
-      "Final Answer: Jang Wonyoung was born in 2004, and she will be 21 years old in 2025.\u001b[0m\n",
+      "Final Answer: Jang Wonyoung was born in 2004, and in 2025, she will be 21 years old.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -589,10 +592,10 @@
     {
      "data": {
       "text/plain": [
-       "'Jang Wonyoung was born in 2004, and she will be 21 years old in 2025.'"
+       "'Jang Wonyoung was born in 2004, and in 2025, she will be 21 years old.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,6 +618,13 @@
     "\n",
     "agent.run(\"아이브 장원영이 태어난 해는? 2025년 현재의 나이는?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
