--- a/LLM/LangChain/langchain_8_2.ipynb
+++ b/LLM/LangChain/langchain_8_2.ipynb
@@ -39,14 +39,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#openAI Imbedding model\n",
+    "# openAI Imbedding model\n",
     "from langchain_openai import OpenAIEmbeddings\n",
-    "from dotenv import load_dotenv()\n",
+    "from dotenv import load_dotenv\n",
     "import os\n",
     "\n",
     "load_dotenv()\n",
     "\n",
-    "api_key = os.getenv('OPENAI_API_KEY')\n"
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-ada-002\", api_key=api_key)\n",
+    "\n",
+    "from langchain.vectorstores import Chroma\n",
+    "\n",
+    "db = Chroma.from_documents(docs, embeddings, persist_directory=\"data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_24876\\467918627.py:3: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(model_name=model, api_key=api_key)\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_24876\\467918627.py:7: LangChainDeprecationWarning: This class is deprecated. See the following migration guides for replacements based on `chain_type`:\n",
+      "stuff: https://python.langchain.com/docs/versions/migrating_chains/stuff_docs_chain\n",
+      "map_reduce: https://python.langchain.com/docs/versions/migrating_chains/map_reduce_chain\n",
+      "refine: https://python.langchain.com/docs/versions/migrating_chains/refine_chain\n",
+      "map_rerank: https://python.langchain.com/docs/versions/migrating_chains/map_rerank_docs_chain\n",
+      "\n",
+      "See also guides on retrieval and question-answering here: https://python.langchain.com/docs/how_to/#qa-with-rag\n",
+      "  chain = load_qa_chain(llm, chain_type='stuff', verbose=True)\n",
+      "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_24876\\467918627.py:12: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  answer = chain.run(input_documents = matching_docs, question=query)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new StuffDocumentsChain chain...\u001b[0m\n",
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mSystem: Use the following pieces of context to answer the user's question. \n",
+      "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+      "----------------\n",
+      "Artificial intelligence (AI) is the intelligence of machines or software, as opposed to the intelligence of humans or animals. It is a field of study in computer science that develops and studies intelligent machines. Such machines may be called AIs.\n",
+      "\n",
+      "AI technology is widely used throughout industry, government, and science. Some high-profile applications are: advanced web search engines (e.g., Google Search), recommendation systems (used by YouTube, Amazon, and Netflix), understanding human speech (such as Google Assistant, Siri, and Alexa), self-driving cars (e.g., Waymo), generative and creative tools (ChatGPT and AI art), and superhuman play and analysis in strategy games (such as chess and Go).[1]\n",
+      "\n",
+      "Alan Turing was the first person to carry out substantial research in the field that he called Machine Intelligence.[2] Artificial intelligence was founded as an academic discipline in 1956.[3] The field went through multiple cycles of optimism[4][5] followed by disappointment and loss of funding.[6][7] Funding and interest vastly increased after 2012 when deep learning surpassed all previous AI techniques,[8] and after 2017 with the transformer architecture.[9] This led to the AI spring of the 2020s, with companies, universities, and laboratories overwhelmingly based in the United States pioneering significant advances in artificial intelligence.[10]\n",
+      "\n",
+      "The various sub-fields of AI research are centered around particular goals and the use of particular tools. The traditional goals of AI research include reasoning, knowledge representation, planning, learning, natural language processing, perception, and support for robotics.[a] General intelligence (the ability to complete any task performable by a human) is among the field's long-term goals.[11]\n",
+      "\n",
+      "To solve these problems, AI researchers have adapted and integrated a wide range of problem-solving techniques, including search and mathematical optimization, formal logic, artificial neural networks, and methods based on statistics, operations research, and economics.[b] AI also draws upon psychology, linguistics, philosophy, neuroscience and other fields.[12]\n",
+      "Human: AI란?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'AI, 또는 인공지능은 인간이나 동물의 지능이 아닌 기계나 소프트웨어의 지능을 의미합니다. 컴퓨터 과학의 한 분야로, 인공지능을 갖춘 기계를 개발하고 연구하는 것을 목표로 합니다. AI 기술은 산업, 정부, 과학 분야에서 널리 사용되며, 웹 검색 엔진, 추천 시스템, 음성 인식, 자율주행차, 생성 및 창작 도구, 전략 게임 분석 등 다양한 분야에서 활용되고 있습니다. 인공지능은 1956년에 학문 분야로서 설립되었으며, 최근에는 딥러닝과 트랜스포머 아키텍처의 발전으로 인해 많은 관심과 자금이 집중되고 있습니다. AI 연구는 추론, 지식 표현, 계획, 학습, 자연어 처리, 지각, 로봇공학 지원 등 다양한 목표를 중심으로 이루어지고 있습니다.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "model = \"gpt-4o\"\n",
+    "llm = ChatOpenAI(model_name=model, api_key=api_key)\n",
+    "\n",
+    "# QnA체인을 사용하여 쿼리에 대한 답변 얻기\n",
+    "from langchain.chains.question_answering import load_qa_chain\n",
+    "\n",
+    "chain = load_qa_chain(llm, chain_type=\"stuff\", verbose=True)\n",
+    "\n",
+    "# 쿼리를 작성하고 유사성 검색을 수행하여 답변을 생성, 따라서 임베딩 한 내용 중 질의해야한다.\n",
+    "query = \"AI란?\"\n",
+    "matching_docs = db.similarity_search(query)\n",
+    "answer = chain.run(input_documents=matching_docs, question=query)\n",
+    "answer"
    ]
   }
  ],
